@@ -1,3 +1,4 @@
+Fixed: Bucket pie slices shouldn't jump around when changing the max spinner
 Made empty containers gray, but have them turn black when it contains anything (as in toggle-based version)
 Disable numerator spinner as a function of min/max spinner
 Update numerator/denominator based on max
